added JqGrid compliant data export

--- a/btechco_excelexport.csproj
+++ b/btechco_excelexport.csproj
@@ -57,10 +57,12 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="examplejqgrid.html" />
     <Content Include="examplexml.html" />
     <Content Include="exampletable.html" />
     <Content Include="examplejson.html" />
     <Content Include="index.html" />
+    <Content Include="jqgrid.xml" />
     <Content Include="LICENSE.txt" />
     <Content Include="Scripts\jquery-2.0.1.min.js" />
     <Content Include="Scripts\jquery.base64.js" />
