--- a/battatech_excelexport.csproj
+++ b/battatech_excelexport.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="exampleencoding.html" />
     <Content Include="exampleTableReturnUri.html" />
     <Content Include="examplejqgrid.html" />
     <Content Include="examplexml.html" />
