changed the home page

--- a/src/bower.json
+++ b/src/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "battatech_excelexport",
   "version": "2.0.0",
-  "homepage": "https://github.com/battatech/battatech_excelexport",
+  "homepage": "http://battatech.com/blog/how-to-export-to-excel-sheet-on-server-side.aspx",
   "authors": [
     "Tarun Batta <info@battatech.com>"
   ],
