--- a/src/battatech_excelexport.csproj
+++ b/src/battatech_excelexport.csproj
@@ -63,10 +63,10 @@
     <Content Include="examplexml.html" />
     <Content Include="exampletable.html" />
     <Content Include="examplejson.html" />
+    <Content Include="Gruntfile.js" />
     <Content Include="index.html" />
     <Content Include="jqgrid.xml" />
     <Content Include="Scripts\jquery.battatech.excelexport.js" />
-    <Content Include="Scripts\jquery.battatech.excelexport.min.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="battatech_excelexport.jquery.json" />
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Content Include="web.config" />
     <Content Include="bower.json" />
+    <Content Include="package.json" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
