--- a/src/bower.json
+++ b/src/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "battatech_excelexport",
   "version": "2.1.2",
-  "homepage": "http://battatech.com/blog/how-to-export-to-excel-sheet-on-server-side.aspx",
+  "homepage": "http://battatech.com/blog/how-to-export-to-excel-sheet-on-client-side",
   "authors": [
     "Tarun Batta <info@battatech.com>"
   ],
