--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,9 @@
 {
   "name": "excelexportjs",
   "version": "3.0.0",
-  "devDependencies": 
-  {
-	  "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.6.0",
-	  "grunt-contrib-copy": "~0.7.0"
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-uglify": "~0.6.0"
   }
 }
