updated name of package

--- a/src/bower.json
+++ b/src/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "excelExportJs",
+  "name": "excelexportjs",
   "version": "1.0.0",
   "homepage": "http://techbytarun.com/export-to-excel-sheet-using-client-side-javascript/",
   "authors": [
