--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
-    "name": "@tarunbatta/excelexportjs",
-    "version": "4.0.4",
-    "description": "Client Side Excel Export using JavaScript",
+    "name": "excelexportjs",
+    "version": "5.0.0",
+    "description": "Client Side Excel Export using TypeScript",
+    "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "files": [
+        "dist",
+        "LICENSE.txt",
+        "README.md",
+        "SECURITY.md"
+    ],
     "scripts": {
-        "prepare": "npm run build",
-        "build": "tsc",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "clean": "rimraf dist",
+        "build": "npm install && npm run lint && rollup -c",
+        "test": "jest",
+        "lint": "eslint src",
+        "lint:fix": "eslint src --fix",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "prepare": "husky",
+        "postinstall": "husky install",
+        "release": "npm version patch && npm publish"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint --fix",
+            "prettier --write"
+        ]
     },
     "repository": {
         "type": "git",
@@ -16,19 +35,32 @@
     "keywords": [
         "clientside",
         "excel",
-        "export"
+        "export",
+        "xlsx",
+        "spreadsheet"
     ],
     "author": "Tarun Batta",
     "license": "MIT",
     "engines": {
-        "node": ">=10.16.3",
-        "npm": ">=6.11.3"
+        "node": ">=16.0.0",
+        "npm": ">=8.0.0"
     },
     "devDependencies": {
-        "grunt": "^1.6.1",
-        "grunt-contrib-copy": "^1.0.0",
-        "grunt-contrib-uglify": "^5.2.2",
-        "live-server": "^1.1.0",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.6",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
+        "eslint": "^8.57.0",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^30.0.0",
+        "prettier": "^3.2.5",
+        "rimraf": "^5.0.5",
+        "rollup": "^4.12.0",
+        "ts-jest": "^29.1.2",
+        "tslib": "^2.6.2",
         "typescript": "^5.3.3"
     },
     "bugs": {
