--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
         "npm": ">=8.0.0"
     },
     "devDependencies": {
+        "@jest/globals": "^30.0.0",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
-        "@types/jest": "^29.5.12",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20.11.24",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
