--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "clean": "rimraf dist",
         "build": "npm install && npm run lint && rollup -c",
         "test": "jest",
+        "test:coverage": "jest --coverage",
         "lint": "eslint src",
         "lint:fix": "eslint src --fix",
         "format": "prettier --write \"src/**/*.ts\"",
