--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.1",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^30.0.0",
