--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "excelexportjs",
-    "version": "5.0.1",
+    "name": "@tarunbatta/excelexportjs",
+    "version": "5.0.0",
     "description": "Client Side Excel Export using TypeScript",
     "type": "module",
     "main": "dist/index.js",
@@ -21,7 +21,7 @@
         "format": "prettier --write \"src/**/*.ts\"",
         "prepare": "husky",
         "postinstall": "husky install",
-        "release": "npm version patch && npm publish"
+        "release": "npm version patch && npm publish --access=public"
     },
     "lint-staged": {
         "*.ts": [
@@ -55,8 +55,8 @@
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
         "eslint": "^8.57.0",
-        "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-prettier": "^5.4.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^30.0.0",
