--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
         "build": "npm install && npm run lint && rollup -c",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "lint": "eslint src",
-        "lint:fix": "eslint src --fix",
+        "lint": "eslint --config eslint.config.js src",
+        "lint:fix": "eslint --config eslint.config.js src --fix",
         "format": "prettier --write \"src/**/*.ts\"",
         "prepare": "husky",
         "postinstall": "husky install",
