--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
     - package-ecosystem: 'npm'
       directory: '/'
       schedule:
-          interval: 'weekly'
-          day: 'monday'
+          interval: 'monthly'
+          day: 'sunday'
           time: '09:00'
       open-pull-requests-limit: 10
       reviewers:
@@ -33,8 +33,8 @@ updates:
     - package-ecosystem: 'github-actions'
       directory: '/'
       schedule:
-          interval: 'weekly'
-          day: 'monday'
+          interval: 'monthly'
+          day: 'sunday'
           time: '09:00'
       open-pull-requests-limit: 5
       reviewers:
